<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".RegistarActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Edt_movel"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/board_textview"
        android:drawableLeft="@drawable/ic_baseline_phone_iphone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/STR_movel"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:textColor="@color/escrever"
        android:textColorHint="@color/overButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Edt_nome"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="208dp"
        android:background="@drawable/board_textview"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/STR_nome"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:text="Username"
        android:textColor="@color/overButton"
        android:textColorHint="@color/overButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/Str_registar_1"
        android:textColor="@color/overButton"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Registo" />

    <Button
        android:id="@+id/Btn_voltar"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="612dp"
        android:background="@drawable/board_textview"
        android:backgroundTint="@color/backgroud_2"
        android:text="@string/voltar"
        android:textColor="@color/overButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_registar"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/board_textview"
        android:backgroundTint="@color/backgroud_2"
        android:text="@string/Str_registar_1"
        android:textColor="@color/overButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Edt_password1"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="466dp"
        android:background="@drawable/board_textview"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/STR_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:textColor="@color/escrever"
        android:textColorHint="@color/overButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Edt_idade"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="399dp"
        android:background="@drawable/board_textview"
        android:drawableLeft="@drawable/ic_baseline_calendar_month_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/STR_idade"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:textColor="@color/escrever"
        android:textColorHint="@color/overButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Edt_email1"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="336dp"
        android:background="@drawable/board_textview"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/STR_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:textColor="@color/escrever"
        android:textColorHint="@color/overButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/versao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/versao"
        android:textColor="@color/overButton"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>