<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<RelativeLayout
android:layout_width="match_parent"
android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILEventoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/STR_cnome"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edt_eventoNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textImeMultiLine|textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/Btn_date"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:text="@string/Str_date"
            app:boxStrokeColor="@color/purple_200" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILeventoGeo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/Str_geo"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edt_geopoint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType=""
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/Btn_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:importantForAutofill="no"
            android:hint="@string/Str_linkImage"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILEventoDescription"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/STR_descricao"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edt_desEvento"
            android:layout_width="380dp"
            android:layout_height="185dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textLongMessage|textImeMultiLine|textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/Img_evento"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:layout_width="match_parent" />


    <Button
        android:id="@+id/Btn_adEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/STR_cnevento"
        android:textAllCaps="false" />


</LinearLayout>


</RelativeLayout>
    </ScrollView>